--- a/templates/Laravel-Blade-Plus.xml
+++ b/templates/Laravel-Blade-Plus.xml
@@ -1,4 +1,4 @@
-<templateSet group="Laravel-Blade">
+<templateSet group="Laravel-Blade-Plus">
   <template name="@elseif" value="@elseif ($START$)&#10;    $SELECTION$$END$" description="Blade @elseif" toReformat="false" toShortenFQNames="true">
     <variable name="START" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
